Bug 1297105 - Prevent crash when DX11 resources fail to be allocated for Oculus VR HMD presentation r=mccr8

MozReview-Commit-ID: 3KLGu3DJVbP